; ModuleID = '/home/carl/AnghaBench/reactos/base/shell/progman/extr_dialog.c_DIALOG_AddFilterItem.c'
source_filename = "/home/carl/AnghaBench/reactos/base/shell/progman/extr_dialog.c_DIALOG_AddFilterItem.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@Globals = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@MAX_STRING_LEN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8**, i32, i32)* @DIALOG_AddFilterItem to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DIALOG_AddFilterItem(i8** %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8** %0, i8*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %8 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @Globals, i32 0, i32 0), align 4
  %9 = load i32, i32* %6, align 4
  %10 = load i8**, i8*** %5, align 8
  %11 = load i8*, i8** %10, align 8
  %12 = load i32, i32* @MAX_STRING_LEN, align 4
  %13 = call i32 @LoadStringW(i32 %8, i32 %9, i8* %11, i32 %12)
  %14 = load i8**, i8*** %5, align 8
  %15 = load i8*, i8** %14, align 8
  %16 = call i64 @wcslen(i8* %15)
  %17 = add nsw i64 %16, 1
  %18 = load i8**, i8*** %5, align 8
  %19 = load i8*, i8** %18, align 8
  %20 = getelementptr inbounds i8, i8* %19, i64 %17
  store i8* %20, i8** %18, align 8
  %21 = load i8**, i8*** %5, align 8
  %22 = load i8*, i8** %21, align 8
  %23 = load i32, i32* %7, align 4
  %24 = call i32 @lstrcpyW(i8* %22, i32 %23)
  %25 = load i8**, i8*** %5, align 8
  %26 = load i8*, i8** %25, align 8
  %27 = call i64 @wcslen(i8* %26)
  %28 = add nsw i64 %27, 1
  %29 = load i8**, i8*** %5, align 8
  %30 = load i8*, i8** %29, align 8
  %31 = getelementptr inbounds i8, i8* %30, i64 %28
  store i8* %31, i8** %29, align 8
  %32 = load i8**, i8*** %5, align 8
  %33 = load i8*, i8** %32, align 8
  store i8 0, i8* %33, align 1
  %34 = load i32, i32* %4, align 4
  ret i32 %34
}

declare dso_local i32 @LoadStringW(i32, i32, i8*, i32) #1

declare dso_local i64 @wcslen(i8*) #1

declare dso_local i32 @lstrcpyW(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
